--- a/light.html
+++ b/light.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="author" content="Benjamin Todd">
         <meta name="description" content="Commander Central">
-        <title>Commander Central</title>
+        <title>All Games Display</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="style.css"> 
