--- a/heavy.html
+++ b/heavy.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <meta name="author" content="Benjamin Todd">
-        <meta name="description" content="Commander Central">
-        <title>Commander Central</title>
+        <meta name="description" content="All Games Breakdown">
+        <title>All Games Display</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="style.css"> 
@@ -29,306 +29,50 @@
     <main>   
         <h1>Heavy Weight Board Games</h1>
         <div class="gallery">
-        <div class="first"><figure>
-            <img src="images/arkhamhorror.webp" alt="Arkham Horror">
-            <figcaption>Arkham Horror</figcaption>
-        </figure></div>
-        <figure>
-            <img src="images/bang.webp" alt="BANG!" height="250px">
-            <figcaption>BANG!</figcaption>
-        </figure>
-        <figure>
-            <img src="images/bears.webp" alt="Bears and the Bees" height="250px">
-            <figcaption>Bears and the Bees</figcaption>
-        </figure>
-        <figure>
-            <img src="images/baldursgate.webp" alt="Betrayal at Baldur's Gate" height="250px">
-            <figcaption>Betrayal at Baldur's Gate</figcaption>
-        </figure>
-        <figure>
-            <img src="images/betrayalathouse.webp" alt="Betrayal at House at the Hill" height="250px">
-            <figcaption>Betrayal at House on the Hill</figcaption>
-        </figure>
-        <figure>
-            <img src="images/bossmonster.webp" alt="Boss Monster" height="250px">
-            <figcaption>Boss Monster</figcaption>
-        </figure>
-        <figure>
-            <img src="images/bristol.webp" alt="Bristol 1350" height="250px">
-            <figcaption>Bristol 1350</figcaption>
-        </figure>
-        <figure>
-            <img src="images/calltoadventurednd.webp" alt="Call to Adventure Epic Origins" height="250px">
-            <figcaption>Call to Adventure: Epic Origins</figcaption>
-        </figure>
-        <figure>
-            <img src="images/calltoadventurestormlight.webp" alt="Call to Adventure: Stormlight Archive" height="250px">
-            <figcaption>Call to Adventure: Stormlight Archive</figcaption>
-        </figure>
-        <figure>
-            <img src="images/captainisdead.webp" alt="The Captain is Dead" height="250px">
-            <figcaption>The Captain is Dead</figcaption>
-        </figure>
-        <figure>
-            <img src="images/captainisdeadlockdown.webp" alt="The Captain is Dead: Lockdown" height="250px">
-            <figcaption>The Captain is Dead: Lockdown</figcaption>
-        </figure>
-        <figure>
-            <img src="images/carcassonne.webp" alt="Carcassonne" height="250px">
-            <figcaption>Carcassonne</figcaption>
-        </figure>
-        <figure>
-            <img src="images/cardsagainsthumanity.webp" alt="Cards Against Humanity" height="250px">
-            <figcaption>Cards Against Humanity</figcaption>
-        </figure>
-        <figure>
-            <img src="images/cascadia.webp" alt="Cascadia" height="250px">
-            <figcaption>Cascadia</figcaption>
-        </figure>
-        <figure>
-            <img src="images/castlepanic.webp" alt="Castle Panic" height="250px">
-            <figcaption>Castle Panic</figcaption>
-        </figure>
-        <figure>
-            <img src="images/catan.webp" alt="Settlers of Catan" height="250px">
-            <figcaption>Settlers of Catan</figcaption>
-        </figure>
-        <figure>
-            <img src="images/catancities.webp" alt="Settlers of Catan: Cities and Knights" height="250px">
-            <figcaption>Settlers of Catan: Cities and Knights</figcaption>
-        </figure>
-        <figure>
-            <img src="images/catanseafarers.webp" alt="Settlers of Catan: Seafarers" height="250px">
-            <figcaption>Settlers of Catan: Seafarers</figcaption>
-        </figure>
-        <figure>
-            <img src="images/codenames.webp" alt="Codenames" height="250px">
-            <figcaption>Codenames</figcaption>
-        </figure>
-        <figure>
-            <img src="images/coveryourassets.webp" alt="Cover Your Assets" height="250px">
-            <figcaption>Cover Your Assets</figcaption>
-        </figure>
-        <figure>
-            <img src="images/coveryourkingdom.webp" alt="Cover Your Kingdom" height="250px">
-            <figcaption>Cover Your Kingdom</figcaption>
-        </figure>
-        <figure>
-            <img src="images/thecrew.webp" alt="The Crew: The Quest for Planet Nine" height="250px">
-            <figcaption>The Crew: The Quest for Planet Nine</figcaption>
-        </figure>
-        <figure>
-            <img src="images/deadwood.webp" alt="Deadwood 1876" height="250px">
-            <figcaption>Deadwood 1876</figcaption>
-        </figure>
-        <figure>
-            <img src="images/dicethrone.webp" alt="Dice Throne" height="250px">
-            <figcaption>Dice Throne</figcaption>
-        </figure>
-        <figure>
-            <img src="images/dragoon.webp" alt="Dragoon" height="250px">
-            <figcaption>Dragoon</figcaption>
-        </figure>
-        <figure>
-            <img src="images/drinkingfluxx.webp" alt="Drinking Fluxx" height="250px">
-            <figcaption>Drinking Fluxx</figcaption>
-        </figure>
-        <figure>
-            <img src="images/dunebetrayal.webp" alt="Dune: Betrayal" height="250px">
-            <figcaption>Dune: Betrayal</figcaption>
-        </figure>
-        <figure>
-            <img src="images/dungeonmayhem.webp" alt="Dungeon Mayhem" height="250px">
-            <figcaption>Dungeon Mayhem</figcaption>
-        </figure>
-        <figure>
-            <img src="images/explodingkittens.webp" alt="Exploding Kittens" height="250px">
-            <figcaption>Exploding Kittens</figcaption>
-        </figure>
-        <figure>
-            <img src="images/fivenights.webp" alt="Five Nights at Freddy's: Night of Frights!" height="250px">
-            <figcaption>Five Nights at Freddy's: Night of Frights!</figcaption>
-        </figure>
-        <figure>
-            <img src="images/flashpoint.webp" alt="Flash Point" height="250px">
-            <figcaption>Flash Point</figcaption>
-        </figure>
-        <figure>
-            <img src="images/gameofphones.webp" alt="Game of Phones" height="250px">
-            <figcaption>Game of Phones</figcaption>
-        </figure>
-        <figure>
-            <img src="images/gloomhaven.webp" alt="Gloomhaven" height="250px">
-            <figcaption>Gloomhaven</figcaption>
-        </figure>
-        <figure>
-            <img src="images/gloomhavenlion.webp" alt="Gloomhaven: Jaws of the Lion" height="250px">
-            <figcaption>Gloomhaven: Jaws of the Lion</figcaption>
-        </figure>
-        <figure>
-            <img src="images/heretoslay.webp" alt="Here to Slay" height="250px">
-            <figcaption>Here to Slay</figcaption>
-        </figure>
-        <figure>
-            <img src="images/lotrmiddleearth.webp" alt="Lord of the Rings: Journeys in Middle Earth" height="250px">
-            <figcaption>Lord of the Rings: Journey in Middle Earth</figcaption>
-        </figure>
-        <figure>
-            <img src="images/lotrcardgame.jpg" alt="Lord of the Rings: Living Card Game" height="250px">
-            <figcaption>Lord of the Rings: Living Card Game</figcaption>
-        </figure>
-        <figure>
-            <img src="images/lotrboardgame.webp" alt="Lord of the Rings Board Game" height="250px">
-            <figcaption>Lord of the Rings Board Game</figcaption>
-        </figure>
-        <figure>
-            <img src="images/lordsofwaterdeep.webp" alt="Lords of Waterdeep" height="250px">
-            <figcaption>Lords of Waterdeep</figcaption>
-        </figure>
-        <figure>
-            <img src="images/lovecraftletter.webp" alt="Lovecraft Letter" height="250px">
-            <figcaption>Lovecraft Letter</figcaption>
-        </figure>
-        <figure>
-            <img src="images/themind.webp" alt="The Mind" height="250px">
-            <figcaption>The Mind</figcaption>
-        </figure>
-        <figure>
-            <img src="images/monsterhunter.webp" alt="Monster Hunter World Board Game" height="250px">
-            <figcaption>Monster Hunter World Board Game</figcaption>
-        </figure>
-        <figure>
-            <img src="images/munchkindeluxe.webp" alt="Munchkin Deluxe" height="250px">
-            <figcaption>Munchkin Deluxe</figcaption>
-        </figure>
-        <figure>
-            <img src="images/munchkincriticalrole.webp" alt="Munchkin Critical Role" height="250px">
-            <figcaption>Munchkin Critical Role</figcaption>
-        </figure>
-        <figure>
-            <img src="images/nightcage.webp" alt="The Night Cage" height="250px">
-            <figcaption>The Night Cage</figcaption>
-        </figure>
-        <figure>
-            <img src="images/oregontrail.webp" alt="Oregon Trail Card Game" height="250px">
-            <figcaption>Oregon Trail Card Game</figcaption>
-        </figure>
-        <figure>
-            <img src="images/pandemic.webp" alt="Pandemic" height="250px">
-            <figcaption>Pandemic</figcaption>
-        </figure>
-        <figure>
-            <img src="images/pandemichotzonena.webp" alt="Pandemic: Hot Zone - North America" height="250px">
-            <figcaption>Pandemic: Hot Zone - North America</figcaption>
-        </figure>
-        <figure>
-            <img src="images/pennypress.webp" alt="Penny Press" height="250px">
-            <figcaption>Penny Press</figcaption>
-        </figure>
-        <figure>
-            <img src="images/poetryforneandrethals.webp" alt="Poetry For Neandrethals" height="250px">
-            <figcaption>Poetry for Neandrethals</figcaption>
-        </figure>
-        <figure>
-            <img src="images/portal.webp" alt="Portal: The Uncooperative Cake Aquisition Game" height="250px">
-            <figcaption>Portal: The Uncooperative Cake Aquisition Game</figcaption>
-        </figure>
-        <figure>
-            <img src="images/resarcana.webp" alt="Res Arcana" height="250px">
-            <figcaption>Res Arcana</figcaption>
-        </figure>
-        <figure>
-            <img src="images/root.webp" alt="Root" height="250px">
-            <figcaption>Root</figcaption>
-        </figure>
-        <figure>
-            <img src="images/salem.webp" alt="Salem 1692" height="250px">
-            <figcaption>Salem 1692</figcaption>
-        </figure>
-        <figure>
-            <img src="images/scattegories.jpg" alt="Scattegories" height="250px">
-            <figcaption>Scattegories</figcaption>
-        </figure>
-        <figure>
-            <img src="images/secrethitler.webp" alt="Secret Hitler" height="250px">
-            <figcaption>Secret Hitler</figcaption>
-        </figure>
-        <figure>
-            <img src="images/sheriffofnottingham.webp" alt="Sheriff of Nottingham" height="250px">
-            <figcaption>Sheriff of Notthingham</figcaption>
-        </figure>
-        <figure>
-            <img src="images/slaythespire.webp" alt="Slay the Spire Board Game" height="250px">
-            <figcaption>Slay the Spire Board Game</figcaption>
-        </figure>
-        <figure>
-            <img src="images/smallworld.webp" alt="Small World" height="250px">
-            <figcaption>Small World</figcaption>
-        </figure>
-        <figure>
-            <img src="images/spacebase.webp" alt="Space Base" height="250px">
-            <figcaption>Space Base</figcaption>
-        </figure>
-        <figure>
-            <img src="images/sushigo.webp" alt="Sushi Go!" height="250px">
-            <figcaption>Sushi Go!</figcaption>
-        </figure>
-        <figure>
-            <img src="images/swashbuckled.webp" alt="Swashbuckled" height="250px">
-            <figcaption>Swashbuckled</figcaption>
-        </figure>
-        <figure>
-            <img src="images/sweetexistence.webp" alt="Sweet Existence: A Strange Planet" height="250px">
-            <figcaption>Sweet Existence: A Strange Planet</figcaption>
-        </figure>
-        <figure>
-            <img src="images/tacocat.webp" alt="Taco Cat Goat Cheese Pizza" height="250px">
-            <figcaption>Taco Cat Goat Cheese Pizza</figcaption>
-        </figure>
-        <figure>
-            <img src="images/terraformingmars.webp" alt="Terraforming Mars" height="250px">
-            <figcaption>Terraforming Mars</figcaption>
-        </figure>
-        <figure>
-            <img src="images/chameleon.webp" alt="The Chameleon" height="250px">
-            <figcaption>The Chameleon</figcaption>
-        </figure>
-        <figure>
-            <img src="images/tickettoride.webp" alt="Ticket to Ride" height="250px">
-            <figcaption>Ticket to Ride</figcaption>
-        </figure>
-        <figure>
-            <img src="images/tickettorideeurope.webp" alt="Ticket to Ride: Europe" height="250px">
-            <figcaption>Ticket to Ride: Europe</figcaption>
-        </figure>
-        <figure>
-            <img src="images/tickettoridesanfran.webp" alt="Ticket to Ride: San Fransisco" height="250px">
-            <figcaption>Ticket to Ride: San Fransisco</figcaption>
-        </figure>
-        <figure>
-            <img src="images/tinytowns.webp" alt="Tiny Towns" height="250px">
-            <figcaption>Tiny Towns</figcaption>
-        </figure>
-        <figure>
-            <img src="images/unstableunicorns.webp" alt="Unstable Unicorns" height="250px">
-            <figcaption>Unstable Unicorns</figcaption>
-        </figure>
-        <figure>
-            <img src="images/villainous.webp" alt="Disney Villainous" height="250px">
-            <figcaption>Disney Villainous</figcaption>
-        </figure>
-        <figure>
-            <img src="images/marvelvillainous.webp" alt="Marvel Villainous" height="250px">
-            <figcaption>Marvel Villainous</figcaption>
-        </figure>
-        <figure>
-            <img src="images/whatdoyoumeme.webp" alt="What Do You Meme?" height="250px">
-            <figcaption>What Do You Meme?</figcaption>
-        </figure>
-        <figure>
-            <img src="images/wingspan.webp" alt="Wingspan" height="250px">
-            <figcaption>Wingspan</figcaption>
-        </figure>
+            <figure>
+                <img src="images/arkhamhorror.webp" alt="Arkham Horror" height="250px" width="auto">
+                <figcaption>Arkham Horror</figcaption>
+            </figure>
+            <figure>
+                <img src="images/catancities.webp" alt="Settlers of Catan: Cities and Knights" height="250px" width="auto">
+                <figcaption>Settlers of Catan: Cities and Knights</figcaption>
+            </figure>
+            <figure>
+                <img src="images/catanseafarers.webp" alt="Settlers of Catan: Seafarers" height="250px" width="auto">
+                <figcaption>Settlers of Catan: Seafarers</figcaption>
+            </figure>
+            <figure>
+                <img src="images/gloomhaven.webp" alt="Gloomhaven" height="auto" width="250px">
+                <figcaption>Gloomhaven</figcaption>
+            </figure>
+            <figure>
+                <img src="images/gloomhavenlion.webp" alt="Gloomhaven: Jaws of the Lion" height="250px" width="auto">
+                <figcaption>Gloomhaven: Jaws of the Lion</figcaption>
+            </figure>
+            <figure>
+                <img src="images/lotrmiddleearth.webp" alt="Lord of the Rings: Journeys in Middle Earth" height="250px" width="auto">
+                <figcaption>Lord of the Rings: Journey in Middle Earth</figcaption>
+            </figure>
+            <figure>
+                <img src="images/lotrcardgame.jpg" alt="Lord of the Rings: Living Card Game" height="250px" width="auto">
+                <figcaption>Lord of the Rings: Living Card Game</figcaption>
+            </figure>
+            <figure>
+                <img src="images/monsterhunter.webp" alt="Monster Hunter World Board Game" height="250px" width="auto">
+                <figcaption>Monster Hunter World Board Game</figcaption>
+            </figure>
+            <figure>
+                <img src="images/root.webp" alt="Root" height="auto" width="250px">
+                <figcaption>Root</figcaption>
+            </figure>
+            <figure>
+                <img src="images/slaythespire.webp" alt="Slay the Spire Board Game" height="250px" width="auto">
+                <figcaption>Slay the Spire Board Game</figcaption>
+            </figure>
+            <figure>
+                <img src="images/terraformingmars.webp" alt="Terraforming Mars" height="250px" width="auto">
+                <figcaption>Terraforming Mars</figcaption>
+            </figure>
     </div>
     </main>
 
