--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
             <figcaption>Settlers of Catan: Seafarers</figcaption>
         </figure>
         <figure>
+            <img src="images/cityofgears.webp" alt="City of Gears" height="250px" width="auto">
+            <figcaption>City of Gears</figcaption>
+        </figure>
+        <figure>
             <img src="images/codenames.webp" alt="Codenames" height="250px" width="auto">
             <figcaption>Codenames</figcaption>
         </figure>
@@ -153,6 +157,10 @@
         <figure>
             <img src="images/flashpoint.webp" alt="Flash Point" height="250px" width="auto">
             <figcaption>Flash Point</figcaption>
+        </figure>
+        <figure>
+            <img src="images/funemployed.webp" alt="Fun Employed" height="250px" width="auto">
+            <figcaption>Fun Employed</figcaption>
         </figure>
         <figure>
             <img src="images/gameofphones.webp" alt="Game of Phones" height="250px" width="auto">
@@ -313,6 +321,10 @@
         <figure>
             <img src="images/unstableunicorns.webp" alt="Unstable Unicorns" height="auto" width="250px">
             <figcaption>Unstable Unicorns</figcaption>
+        </figure>
+        <figure>
+            <img src="images/verdant.webp" alt="Verdant" height="250px" width="auto">
+            <figcaption>Verdant</figcaption>
         </figure>
         <figure>
             <img src="images/villainous.webp" alt="Disney Villainous" height="250px" width="auto">
