--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <meta name="author" content="Benjamin Todd">
-        <meta name="description" content="Commander Central">
-        <title>Commander Central</title>
+        <meta name="description" content="Misfits Central">
+        <title>Misfits Central</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="style.css"> 
